#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
JProtobufæ–‡ä»¶æ‰«æå™¨
æ‰«ææ‰€æœ‰JProtobuf Javaæ–‡ä»¶ï¼Œæå–æ¶ˆæ¯ä¿¡æ¯å¹¶å­˜å‚¨åˆ°æ•°æ®åº“
"""

import sqlite3
import re
from pathlib import Path
from typing import Dict, List, Optional
from datetime import datetime

class JProtobufScanner:
    """JProtobufæ–‡ä»¶æ‰«æå™¨"""
    
    def __init__(self, db_path: str):
        self.db_path = db_path
        self.project_root = Path('/home/pix/dev/code/java/DnfGameServer')
        self.jprotobuf_dir = self.project_root / 'src' / 'main' / 'java' / 'com' / 'dnfm' / 'mina' / 'protobuf'
    
    def _connect(self):
        """è¿æ¥æ•°æ®åº“"""
        return sqlite3.connect(self.db_path)
    
    def scan_jprotobuf_file(self, java_file: Path) -> Optional[Dict]:
        """æ‰«æå•ä¸ªJProtobufæ–‡ä»¶"""
        # æ’é™¤ç”Ÿæˆçš„æ–‡ä»¶
        if '$JProtoBufClass' in java_file.name:
            return None
        
        try:
            with open(java_file, 'r', encoding='utf-8') as f:
                content = f.read()
        except:
            return None
        
        # æå–æ¶ˆæ¯ä¿¡æ¯
        message_info = {
            'message_name': None,
            'file_path': str(java_file),
            'module_id': None,
            'cmd': None,
            'message_type': None,
            'fields': [],
            'has_dependencies': False
        }
        
        # æå–æ¶ˆæ¯å
        class_match = re.search(r'public\s+class\s+(\w+)\s+(?:extends\s+Message)?', content)
        if not class_match:
            return None
        
        message_info['message_name'] = class_match.group(1)
        
        # ç¡®å®šæ¶ˆæ¯ç±»å‹
        if message_info['message_name'].startswith('REQ_'):
            message_info['message_type'] = 'REQ'
        elif message_info['message_name'].startswith('RES_'):
            message_info['message_type'] = 'RES'
        elif message_info['message_name'].startswith('PT_'):
            message_info['message_type'] = 'PT'
        elif message_info['message_name'].startswith('ENUM_'):
            message_info['message_type'] = 'ENUM'
        else:
            message_info['message_type'] = 'OTHER'
        
        # æå–ModuleIDå’ŒCMD
        meta_match = re.search(r'@MessageMeta\s*\([^)]*module\s*=\s*(\d+)[^)]*cmd\s*=\s*(\d+)', content)
        if meta_match:
            message_info['module_id'] = int(meta_match.group(1))
            message_info['cmd'] = int(meta_match.group(2))
        
        # æå–å­—æ®µ
        field_pattern = r'@Protobuf\([^)]+\)\s+public\s+(\w+)\s+(\w+);'
        for match in re.finditer(field_pattern, content):
            annotations = match.group(0)
            field_type = match.group(1)
            field_name = match.group(2)
            
            # æå–order
            order_match = re.search(r'order\s*=\s*(\d+)', annotations)
            order = int(order_match.group(1)) if order_match else 0
            
            # æå–fieldType
            type_match = re.search(r'fieldType\s*=\s*FieldType\.(\w+)', annotations)
            field_type_full = type_match.group(1) if type_match else 'UNKNOWN'
            
            # æ£€æŸ¥æ˜¯å¦æ˜¯repeated
            is_repeated = 'List<' in annotations
            
            # æ£€æŸ¥æ˜¯å¦æ˜¯optional
            is_optional = 'required = false' in annotations
            
            message_info['fields'].append({
                'field_name': field_name,
                'field_type': field_type,
                'field_type_full': field_type_full,
                'order': order,
                'is_repeated': is_repeated,
                'is_optional': is_optional
            })
        
        # æ£€æŸ¥æ˜¯å¦æœ‰ä¾èµ–ï¼ˆè‡ªå®šä¹‰ç±»å‹ï¼‰
        custom_types = set()
        for field in message_info['fields']:
            if field['field_type'] not in [
                'Integer', 'Long', 'String', 'Boolean', 
                'Float', 'Double', 'Byte', 'Short'
            ]:
                custom_types.add(field['field_type'])
        
        message_info['has_dependencies'] = len(custom_types) > 0
        message_info['field_count'] = len(message_info['fields'])
        
        return message_info
    
    def scan_all_jprotobuf_files(self) -> List[Dict]:
        """æ‰«ææ‰€æœ‰JProtobufæ–‡ä»¶"""
        print("ğŸ” æ‰«æJProtobufæ–‡ä»¶...")
        print()
        
        messages = []
        skipped = 0
        errors = 0
        
        java_files = list(self.jprotobuf_dir.glob('*.java'))
        total_files = len(java_files)
        
        for i, java_file in enumerate(java_files, 1):
            if (i - 1) % 100 == 0:
                print(f"  è¿›åº¦: {i}/{total_files}")
            
            message_info = self.scan_jprotobuf_file(java_file)
            
            if message_info:
                messages.append(message_info)
            elif '$JProtoBufClass' in java_file.name:
                skipped += 1
            else:
                errors += 1
        
        print(f"  å®Œæˆ: {len(messages)} ä¸ªæ¶ˆæ¯")
        print(f"  è·³è¿‡: {skipped} ä¸ªç”Ÿæˆæ–‡ä»¶")
        print(f"  é”™è¯¯: {errors} ä¸ªæ–‡ä»¶")
        print()
        
        return messages
    
    def save_to_database(self, messages: List[Dict]):
        """ä¿å­˜åˆ°æ•°æ®åº“"""
        print("ğŸ’¾ ä¿å­˜åˆ°æ•°æ®åº“...")
        print()
        
        conn = self._connect()
        cursor = conn.cursor()
        
        inserted = 0
        updated = 0
        errors = 0
        
        for message_info in messages:
            try:
                # æ£€æŸ¥æ˜¯å¦å·²å­˜åœ¨
                cursor.execute('''
                    SELECT id FROM jprotobuf_messages
                    WHERE message_name = ?
                ''', (message_info['message_name'],))
                
                existing = cursor.fetchone()
                
                if existing:
                    # æ›´æ–°
                    cursor.execute('''
                        UPDATE jprotobuf_messages
                        SET module_id = ?, cmd = ?, message_type = ?, 
                            field_count = ?, has_dependencies = ?,
                            updated_at = CURRENT_TIMESTAMP
                        WHERE message_name = ?
                    ''', (
                        message_info['module_id'],
                        message_info['cmd'],
                        message_info['message_type'],
                        message_info['field_count'],
                        1 if message_info['has_dependencies'] else 0,
                        message_info['message_name']
                    ))
                    updated += 1
                else:
                    # æ’å…¥
                    cursor.execute('''
                        INSERT INTO jprotobuf_messages
                        (message_name, file_path, module_id, cmd, 
                         message_type, field_count, has_dependencies)
                        VALUES (?, ?, ?, ?, ?, ?, ?)
                    ''', (
                        message_info['message_name'],
                        message_info['file_path'],
                        message_info['module_id'],
                        message_info['cmd'],
                        message_info['message_type'],
                        message_info['field_count'],
                        1 if message_info['has_dependencies'] else 0
                    ))
                    inserted += 1
                
            except Exception as e:
                errors += 1
                print(f"  é”™è¯¯: {message_info['message_name']} - {e}")
        
        conn.commit()
        conn.close()
        
        print(f"  æ’å…¥: {inserted} æ¡è®°å½•")
        print(f"  æ›´æ–°: {updated} æ¡è®°å½•")
        print(f"  é”™è¯¯: {errors} æ¡è®°å½•")
        print()
    
    def scan_and_save(self):
        """æ‰«æå¹¶ä¿å­˜"""
        messages = self.scan_all_jprotobuf_files()
        self.save_to_database(messages)
        
        print("âœ… JProtobufæ‰«æå®Œæˆï¼")
        print()
        
        # æ‰“å°ç»Ÿè®¡
        conn = self._connect()
        cursor = conn.cursor()
        
        cursor.execute('SELECT COUNT(*) FROM jprotobuf_messages')
        total = cursor.fetchone()[0]
        
        cursor.execute('SELECT message_type, COUNT(*) FROM jprotobuf_messages GROUP BY message_type')
        type_stats = cursor.fetchall()
        
        conn.close()
        
        print("ğŸ“Š ç»Ÿè®¡ä¿¡æ¯:")
        print(f"  æ€»æ¶ˆæ¯æ•°: {total}")
        print("  æŒ‰ç±»å‹åˆ†å¸ƒ:")
        for msg_type, count in type_stats:
            print(f"    {msg_type}: {count}")
        print()

def main():
    """ä¸»å‡½æ•°"""
    import argparse
    
    parser = argparse.ArgumentParser(description='JProtobufæ–‡ä»¶æ‰«æå™¨')
    parser.add_argument('--scan', action='store_true', help='æ‰«æå¹¶ä¿å­˜')
    
    args = parser.parse_args()
    
    if args.scan:
        db_path = '/home/pix/dev/code/java/DnfGameServer/devdoc/protobuf/reports/data/migration_system.db'
        scanner = JProtobufScanner(db_path)
        scanner.scan_and_save()
    else:
        parser.print_help()

if __name__ == '__main__':
    main()
